frame/support/test/tests/max_encoded_len_ui/not_encode.rs
use frame_support::traits::MaxEncodedLen;

#[derive(MaxEncodedLen)]
struct NotEncode;

fn main() {}
